<resources>
    <string name="app_name">Fish Snap</string>
    <string name="hello_blank_fragment">Halo fragmen kosong</string>
    <string name="welcome">Selamat datang di Fish Snap!</string>
    <string name="welcome_description">Fokus aplikasi kami adalah untuk mendidik masyarakat dan membantu praktisi perikanan serta membuat program interaktif yang dapat diakses dengan mudah oleh semua orang.</string>
    <string name="btn_signIn">Masuk</string>
    <string name="text_validation">Belum punya akun? <u><b>Daftar disini</b></u></string>
    <string name="sign_up">Daftar</string>
    <string name="made_by">Dibuat Oleh</string>
    <string name="capstone_team_c241_ps013">Tim Capstone C241-PS013</string>
    <string name="logo">Logo</string>
    <string name="text_login">Selamat Datang Kembali!</string>
    <string name="error_email">Email harus menggunakan format yang valid</string>
    <string name="error_username">Username harus hanya satu kata</string>
    <string name="error_name">Hanya boleh diisi huruf</string>
    <string name="error_null">Tidak Boleh Kosong</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_detection">Deteksi</string>
    <string name="menu_history">Riwayat</string>
    <string name="menu_profile">Profil</string>
    <string name="error_password">Password harus melebihi 8 karakter</string>
    <string name="background_image">Gambar Latar</string>
    <string name="enter_your_account_to_login">Masukkan akun anda untuk masuk ke aplikasi</string>
    <string name="password">Kata Sandi</string>
    <string name="username">Nama Pengguna</string>
    <string name="detection_image">Deteksi Gambar</string>
    <string name="image_preview">Pratinjau Gambar</string>
    <string name="btn_analyze">Analisis</string>
    <string name="btn_camera">Kamera</string>
    <string name="btn_gallery">Galeri</string>
    <string name="error_confirm_password">Konfirmasi password harus sama dengan password</string>
    <string name="btn_logout">Keluar</string>
    <string name="btn_ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="btn_tentang_kami">Tentang Kami</string>
    <string name="btn_syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="txt_profile">Informasi Pribadi</string>
    <string name="txt_username">Username</string>
    <string name="txt_name">Nama</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="btn_change_password">Ubah Kata Sandi</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Kata Sandi</string>
    <string name="txt_new_password">Kata Sandi Baru</string>
    <string name="txt_confirm_password">Konfirmasi Kata Sandi</string>
    <string name="tf_useremail_gmail_com">UserEmail@gmail.com</string>
    <string name="logout_tidak">Tidak</string>
    <string name="logout_ya">Ya</string>
    <string name="txt_logout">Keluar</string>
    <string name="anda_yakin_ingin_keluar">Anda yakin ingin keluar?</string>
    <string name="btn_sign_up">Daftar</string>
    <string name="txt_create_an_account">Buat akun baru</string>
    <string name="deskripsi_masakan">Deskripsi Masakan</string>
    <string name="nama_masakan">Nama Masakan</string>
    <string name="nama_ikan">Nama Ikan</string>
    <string name="rekomendasi_masakan">Rekomendasi Masakan</string>
    <string name="tidak_ada_data_riwayat">Tidak ada data riwayat</string>
    <string name="hint_password">********</string>
    <string name="hint_username">Dicoding Indonesia</string>
    <string name="no_news">Tidak ada berita yang ditampilkan</string>
    <string name="bahan_bahan">Bahan - Bahan :</string>
    <string name="cara_masak">Cara Masak :</string>
    <string name="tv_old_password">Kata Sandi Lama</string>
    <string name="btn_submit">Kirim</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="tv_forgot_password">Lupa Kata Sandi</string>
    <string name="content_atas_about">Fish Snap adalah sebuah aplikasi inovatif yang memanfaatkan teknologi deteksi gambar untuk membantu pengguna mengidentifikasi berbagai jenis ikan hanya dengan menggunakan kamera ponsel mereka. Aplikasi ini tidak hanya memungkinkan pengguna untuk mengambil foto ikan yang menarik perhatian mereka, tetapi juga memberikan informasi yang mendalam mengenai jenis ikan tersebut serta berbagai resep olahan ikan yang dapat dicoba.</string>
    <string name="tv_about_fish_snap">Fish Snap</string>
    <string name="tv_about_content_fitur_utama">Fitur Utama :</string>
    <string name="_1_deteksi_dan_identifikasi_ikan">1. Deteksi dan Identifikasi Ikan</string>
    <string name="_2_informasi_lengkap_tentang_ikan">2. Informasi Lengkap tentang Ikan</string>
    <string name="_3_resep_olahan_ikan">3. Resep Olahan Ikan</string>
    <string name="_4_kemudahan_penggunaan">4. Kemudahan Penggunaan</string>
    <string name="cek_email_forgot_password">Cek email anda untuk menerima pengaturan ulang kata sandi</string>
    <string name="tv_syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="welcome_terms">Selamat datang di Fish Snap! Untuk menggunakan aplikasi kami dengan baik, harap baca dan pahami syarat dan ketentuan berikut :</string>
    <string name="purpose_icon">Purpose Icon</string>
    <string name="_1_tujuan_penggunaan_aplikasi">1. Tujuan Penggunaan Aplikasi</string>
    <string name="_2_ketersediaan_layanan">2. Ketersediaan Layanan</string>
    <string name="availability_icon">Availability Icon</string>
    <string name="content_1_terms">Fish Snap dirancang untuk membantu pengguna dalam mendeteksi dan mengidentifikasi jenis ikan berdasarkan gambar yang diambil menggunakan kamera ponsel. Informasi yang disediakan termasuk nama ikan, deskripsi, dan informasi terkait olahan ikan.</string>
    <string name="content_2_terms">Aplikasi Fish Snap tersedia untuk digunakan di seluruh dunia, namun tidak dapat menjamin bahwa aplikasi akan berjalan tanpa gangguan teknis.</string>
    <string name="privacy_icon">Privacy Icon</string>
    <string name="_3_privasi_pengguna">3. Privasi Pengguna</string>
    <string name="content_3_terms">Kami menghormati privasi pengguna. Data yang dikumpulkan oleh aplikasi akan digunakan sesuai dengan Kebijakan Privasi kami.</string>
    <string name="information_icon">Information Icon</string>
    <string name="_4_penggunaan_informasi">4. Penggunaan Informasi</string>
    <string name="content_4_terms">Informasi yang dihasilkan dari penggunaan aplikasi, seperti data penggunaan dan statistik, dapat digunakan untuk tujuan pengembangan produk, perbaikan layanan, dan analisis.</string>
    <string name="changes_icon">Changes Icon</string>
    <string name="_5_perubahan_syarat_dan_ketentuan">5. Perubahan Syarat dan Ketentuan</string>
    <string name="content_5_terms">Syarat dan ketentuan ini dapat diubah atau diperbarui dari waktu ke waktu. Perubahan tersebut akan diinformasikan kepada pengguna melalui pembaruan aplikasi atau pemberitahuan lainnya.</string>
    <string name="commercial_use_icon">Commercial Use Icon</string>
    <string name="_6_penggunaan_komersial">6. Penggunaan Komersial</string>
    <string name="content_6_terms">Penggunaan aplikasi ini untuk tujuan komersial atau reproduksi ulang tanpa izin adalah dilarang.</string>
    <string name="user_responsibility_icon">User Responsibility Icon</string>
    <string name="_7_kewajiban_pengguna">7. Kewajiban Pengguna</string>
    <string name="content_7_terms">Penggunaan aplikasi ini merupakan penerimaan sepenuhnya terhadap syarat dan ketentuan ini. Pengguna bertanggung jawab atas keamanan dan kerahasiaan akun mereka sendiri.</string>
    <string name="thanks_terms">Terima kasih telah menggunakan Fish Snap. Dengan mendaftar dan menggunakan aplikasi ini, Anda dianggap telah menyetujui syarat dan ketentuan ini sepenuhnya. Jika Anda memiliki pertanyaan lebih lanjut, jangan ragu untuk menghubungi tim dukungan kami. Selamat menikmati pengalaman menjelajahi dunia ikan bersama Fish Snap! 🐟</string>
    <string name="tf_nama_register">DiCoding Indonesia</string>
    <string name="tf_username_register">DiCoding123</string>
    <string name="understand">Mengerti</string>
</resources>
