<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".ui.profile.AboutFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_back"
            android:layout_alignParentStart="true"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tentang_kami"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_about_fish_snap"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/satinBlue"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:fontFamily="@font/poppins_bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_atas_about"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_about_content_fitur_utama"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/satinBlue"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_deteksi_dan_identifikasi_ikan"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_informasi_lengkap_tentang_ikan"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_resep_olahan_ikan"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_kemudahan_penggunaan"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginBottom="16dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

